[package]
name = "wasm-layout-text"
version = "2.0.0-alpha.1"
authors = ["Christoph Werner <christoph@codepunkt.de>"]
edition = "2018"
repository = ""
description = ""
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.69"
rusttype = "0.8.2"
image = { version = "0.22", default-features = false, features = ["png_codec"] }
glyph_brush_layout = "0.1.8"
serde-wasm-bindgen = "0.1.3"
js-sys = "0.3.33"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Node',
]

# Optimize for speed in release build
[profile.release]
lto = true

# workaround an error with wasm-opt and wasm-pack, optimizing for speed
# @see https://github.com/rustwasm/wasm-pack/issues/886
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
