[package]
authors = ["Christoph Werner <christoph@codepunkt.de>"]
description = "Layouts text and returns the result as an UInt8Array of pixels"
edition = "2018"
license = "MIT"
name = "wasm-layout-text"
repository = "https://github.com/codepunkt/wasm-layout-text"
version = "3.0.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
glyph_brush_layout = "0.1.8"
image = {version = "0.22", default-features = false, features = ["png_codec"]}
js-sys = "0.3.33"
rusttype = "0.8.2"
wasm-bindgen = "0.2.69"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.6", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = {version = "0.4.2", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[dependencies.web-sys]
features = [
  'console',
  'Node',
]
version = "0.3.4"

# Optimize for speed in release build
[profile.release]
lto = true

# workaround an error with wasm-opt and wasm-pack, optimizing for speed
# @see https://github.com/rustwasm/wasm-pack/issues/886
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
